--- a/.github/workflows/actions-pipeline.yml
+++ b/.github/workflows/actions-pipeline.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
+
   build-test:
     runs-on: ubuntu-latest
     steps:
@@ -22,3 +23,15 @@ jobs:
       run: npm run test:unit
     - name: Print softuni username
       run: echo @vas.denkov
+
+  test-ui:
+    runs-on: ubuntu-latest
+    needs:  build-test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+      - name: Wait for deployment completion
+        run: sleep 120
