--- a/.github/workflows/actions-pipeline.yml
+++ b/.github/workflows/actions-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Print softuni username
       run: echo @vas.denkov
 
-  test-ui:
+  deploy:
     runs-on: ubuntu-latest
     needs:  build-test
     steps:
@@ -35,3 +35,18 @@ jobs:
           api-key: ${{ secrets.MY_RENDER_API_KEY }}
       - name: Wait for deployment completion
         run: sleep 120
+
+  test-ui:
+    needs:  deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Run tests
+      run: npm run test:ui
