--- a/.github/workflows/actions-pipeline.yml
+++ b/.github/workflows/actions-pipeline.yml
@@ -48,5 +48,7 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm install
+    - name: Setup playwright
+      run: npx playwright install   
     - name: Run tests
       run: npm run test:ui
